nycreator/style.css
/* NY Creator: Style */

#main-grid.ny, #main-grid.ny .cell {
	border-collapse: separate;
}

#main-grid.ny {
	border-width: calc(var(--cell-size) * 0.08);
}

#main-grid.ny .cell {
	box-sizing: border-box;
	background-clip: border-box;
	border-top-width: 0;
	border-left-width: 0;
	border-bottom-width: 0;
	border-right-width: 0;
}

#main-grid.ny .cell.end-x {
	border-right-width: calc(var(--cell-size) * 0.08);
}

#main-grid.ny .cell.end-y {
	border-bottom-width: calc(var(--cell-size) * 0.08);
}

#main-grid.ny .cell .border-x, #main-grid.ny .cell .border-y {
	position: absolute;
	z-index: 20;
}

#main-grid.ny.mark-active .cell .border-x, #main-grid.ny.mark-active .cell .border-y {
	cursor: pointer;
}

#main-grid.ny .cell .border-x {
	top: 0;
	left: var(--cell-size);
	height: var(--cell-size);
	width: calc(var(--cell-size) * 0.07);
	transform: translateX(-105%);
}

#main-grid.ny .cell .border-y {
	top: var(--cell-size);
	left: 0;
	width: var(--cell-size);
	height: calc(var(--cell-size) * 0.07);
	transform: translateY(-105%);
}

/* Color theme */

body {
    /* Color variables */
    --other-cell-color: var(--light, lightgray) var(--dark, #38404c);
    --selected-other-clue-color: var(--light, #8fbef1) var(--dark, #743451);
    --border-select-color: var(--light, rgba(0, 0, 0, 0.4)) var(--dark, rgb(0, 0, 0, 0.4));
}

#main-grid.ny :nth-child(even) .cell:nth-child(odd), #main-grid.ny :nth-child(odd) .cell:nth-child(even) {
	background-color: var(--other-cell-color);
}

#main-grid.ny.mark-active .cell .border-x:hover, #main-grid.ny.mark-active .cell .border-y:hover {
	background-color: var(--border-select-color);
    box-shadow: 0 0 4px 4px var(--selected-cell-color), 0 0 6px 5px var(--blank-cell-color);
}

#main-grid.ny :nth-child(even) .cell.selected-clue:nth-child(odd),
#main-grid.ny :nth-child(odd) .cell.selected-clue:nth-child(even) {
    background-color: var(--selected-other-clue-color);
}

#main-grid.ny .cell.selected-clue.selected.selected {
	background-color: var(--selected-cell-color);
}

